Upgrade web scripts tutorial content and source to SDK 2.2.0.